# tauri-app

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ci.yml  docker-compose.yml  git-setup.sh  package-lock.json  package.json  release.yml  svelte.config.js  vite.config.js
.allai/: workspace.db
.github/: copilot-instructions.md
.github/agents/: tauriflix.agent.md
.github/instructions/: scss-autoinjection.instructions.md
.github/prompts/: scaffold-api.prompt.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauriflix.db
src-tauri/migrations/: 0001_initial.sql  0002_google_auth.sql  0003_username_not_unique.sql
src-tauri/src/: lib.rs
src-tauri/src/api/: anilist.rs  auth.rs  google_auth.rs  itunes.rs  jikan.rs  mod.rs  openlib.rs  rawg.rs  store.rs  tmdb.rs  tvmaze.rs  watchlist.rs
src/lib/api/: anilist.ts  auth.ts  cloud.ts  itunes.ts  jikan.ts  openlib.ts  rawg.ts  tmdb.ts  tvmaze.ts  watchlist.ts
src/lib/components/media/: MediaCard.svelte
src/lib/components/ui/: AppBackground.svelte  CategoryTabs.svelte  GenreCarousel.svelte  GenreFilter.svelte  SearchBar.svelte  UserButton.svelte  WatchlistButton.svelte
src/lib/stores/: ui.svelte.ts  user.svelte.ts  watchlist.svelte.ts
src/lib/styles/: global.css  variables.scss
src/lib/types/: media.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/auth/: +page.svelte
src/routes/media/[type]/[id]/: +page.svelte
src/routes/watchlist/: +page.svelte
